--- a/Front/autostop/src/pages/home/connexion/main/map/search-bar/search-bar.scss
+++ b/Front/autostop/src/pages/home/connexion/main/map/search-bar/search-bar.scss
@@ -1,3 +1,8 @@
-page-search-bar {
-
+.searchbar {
+  background-color: #f4f4f4;
+  border-radius:10px;
+  margin: 8px;
+  -webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
+
