--- a/Front/autostop/src/theme/variables.scss
+++ b/Front/autostop/src/theme/variables.scss
@@ -38,7 +38,9 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  white:        rgb(255, 255, 255),
+  transparent: rgba(255, 255, 255, 0)
 );
 
 
