modal request added stars in progress

--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/request-modal.scss
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/request-modal.scss
@@ -1,3 +1,16 @@
 page-request-modal {
 
+  // max-width: 80vw;
+  // max-height: 60vh;
+  // top: 30%;
+  // left: 10%;
+  // position: absolute;
+
+  .avatarUser{
+    border-radius: 50%;
+    height: 200px;
+    width: 200px;
+
+  }
+
 }
