ajout des forms connexion et register

--- a/Front/autostop/src/theme/variables.scss
+++ b/Front/autostop/src/theme/variables.scss
@@ -34,8 +34,9 @@ $colors: (
   home: #eff4e1,
   button: #b6cb4c,
   input: #f2f1f1,
-  white:        rgb(255, 255, 255),
-  transparent: rgba(255, 255, 255, 0)
+  white: rgb(255, 255, 255),
+  transparent: rgba(255, 255, 255, 0),
+  menu: #258c3d
 );
 
 // App iOS Variables
