Cleaned home page, commented via email for presentation

--- a/Front/autostop/src/theme/variables.scss
+++ b/Front/autostop/src/theme/variables.scss
@@ -12,7 +12,7 @@ $app-direction: ltr;
 
 @import "ionic.globals";
 
-@import "pages/home/home"; // Shared Variables
+// Shared Variables
 // --------------------------------------------------
 // To customize the look and feel of this app, you can override
 // the Sass variables found in Ionic's source scss files.
