--- a/Front/autostop/src/pages/home/home.scss
+++ b/Front/autostop/src/pages/home/home.scss
@@ -1,17 +1,17 @@
 page-home {
   .home {
-    background-color: #eff4e1;
+    background: color($colors, home);
   }
 
   #logo {
-    margin-top: 40%;
-    margin-left: 19%;
-    height: 160px;
-    width: auto;
-  }
-
-  .container {
-    margin-top: 28%;
+    margin-top: 45%;
+    margin-bottom: 15%;
+    img {
+      height: 200px;
+      width: auto;
+      margin: auto;
+      display: block;
+    }
   }
 
   ion-icon {
