Delete button block in scss

--- a/Front/autostop/src/pages/home/home.scss
+++ b/Front/autostop/src/pages/home/home.scss
@@ -14,13 +14,9 @@ page-home {
     }
   }
 
-  ion-icon {
-    margin-top: 30%;
-    margin-left: 37%;
-    justify-content: center;
-  }
-
-  button {
-    margin-top: 20%;
-  }
+  // ion-icon {
+  //   margin-top: 30%;
+  //   margin-left: 37%;
+  //   justify-content: center;
+  // }
 }
