--- a/Front/autostop/src/theme/variables.scss
+++ b/Front/autostop/src/theme/variables.scss
@@ -42,10 +42,12 @@ $colors: (
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
+$datetime-ios-padding-start: 0;
 
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
+$datetime-md-padding-start: 0;
 
 // App Windows Variables
 // --------------------------------------------------
