--- a/Front/autostop/src/theme/variables.scss
+++ b/Front/autostop/src/theme/variables.scss
@@ -26,6 +26,8 @@ $app-direction: ltr;
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
 $colors: (
+  green: green,
+  red: red,
   primary: #488aff,
   secondary: #32db64,
   danger: #f53d3d,
@@ -39,21 +41,17 @@ $colors: (
   menu: #258c3d
 );
 
-
-
 // App iOS Variables
 // --------------------------------------------------
 // iOS only Sass variables can go here
 $menu-ios-background: #258c3d;
 $datetime-ios-padding-start: 0;
 
-
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
 $menu-md-background: #258c3d;
 $datetime-md-padding-start: 7px;
-
 
 // App Windows Variables
 // --------------------------------------------------
