--- a/Front/autostop/src/theme/variables.scss
+++ b/Front/autostop/src/theme/variables.scss
@@ -27,7 +27,7 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 $colors: (
   primary: #488aff,
-  secondary: #32db64,
+  secondary: #248D3D,
   danger: #f53d3d,
   light: #f4f4f4,
   dark: #222,
