--- a/Front/autostop/src/pages/home/register/choice/choice.scss
+++ b/Front/autostop/src/pages/home/register/choice/choice.scss
@@ -22,11 +22,10 @@ page-choice {
             margin-top: 20px;
         }
         background: color($colors, home);
-        #handIcon {
-            width: 100px;
-        }
-        #carIcon {
-            width: 100px;
+
+        .choiceIcons {
+            filter: drop-shadow(1px 2px 3px rgb(80, 102, 70));
+            width: 70px;
         }
     }
 }
