modal elements centered

--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/response-modal.scss
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/response-modal.scss
@@ -1,8 +1,15 @@
 page-response-modal {
-  .avatarUser{
+
+    .avatarUser{
     border-radius: 50%;
-    width: 50vw;
+    width: 30vw;
   }
+
+  .row{
+    display: block;
+    margin: auto;
+  }
+
   .button{
     margin-top: 5%;
   }
