--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/give-rating/give-rating.scss
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/give-rating/give-rating.scss
@@ -1,7 +1,12 @@
 page-give-rating {
+
   .avatarUser{
     border-radius: 50%;
-    width: 50vw;
+    width: 30vw;
+  }
+  .row{
+    display: block;
+    margin: auto;
   }
 
 }
