--- a/Front/autostop/src/pages/home/connexion/main/main.scss
+++ b/Front/autostop/src/pages/home/connexion/main/main.scss
@@ -3,6 +3,10 @@ page-main{
 
     background: color($colors, menu) !important; /* This sets the background color*/
     
+    hr {
+      background-color: white;
+      margin: 0;
+    }
     .scroll-content {
       overflow-y: hidden;
       margin: 0;
@@ -19,8 +23,9 @@ page-main{
     .item {
       background-color: transparent; /*Transparent background-color for each item*/
       color: white;    /*Text color for each item*/
+      
     }
-    
+
   }
   
 }
