--- a/Front/autostop/src/pages/home/connexion/main/main.scss
+++ b/Front/autostop/src/pages/home/connexion/main/main.scss
@@ -3,6 +3,12 @@ page-main{
 
     background: color($colors, menu) !important; /* This sets the background color*/
     
+    h3 {
+      color: white;  
+      display: block;
+      text-align: center;
+    }
+
     hr {
       background-color: white;
       margin: 0;
@@ -16,7 +22,7 @@ page-main{
 
     #avatarUser{
       display: block;
-      margin: 10% auto 10% auto;
+      margin: 10% auto 0 auto;
       width: 200px;
       height: auto;
     }
