Update fix, Disconnect button fix, login password fix, routing choicePage from loginPage

--- a/Front/autostop/src/pages/home/connexion/main/main.scss
+++ b/Front/autostop/src/pages/home/connexion/main/main.scss
@@ -25,6 +25,12 @@ page-main{
       margin: 10% auto 0 auto;
       width: 200px;
       height: auto;
+      border-radius: 50%;
+    }
+
+    .button {
+      display: block;
+      margin: 20% auto 0 auto;
     }
 
     .item {
