changed itinerary trip to polyline string

--- a/Front/autostop/src/pages/home/connexion/main/map/map.scss
+++ b/Front/autostop/src/pages/home/connexion/main/map/map.scss
@@ -11,6 +11,11 @@ page-map {
     margin: auto;
     display: block
   }
+  #matchedButton{
+    margin: auto;
+    display: block;
+
+  }
 }
 
 SearchBarPageComponent {
