--- a/Front/autostop/src/theme/variables.scss
+++ b/Front/autostop/src/theme/variables.scss
@@ -44,18 +44,30 @@ $colors: (
 // iOS only Sass variables can go here
 $menu-ios-background: #258c3d;
 $datetime-ios-padding-start: 0;
+$toggle-ios-width : 70px;
+$toggle-ios-height : 30px;
+$toggle-ios-handle-height :25px;
+$toggle-ios-handle-width : 25px;
 
 // App Material Design Variables
 // --------------------------------------------------
 // Material Design only Sass variables can go here
 $menu-md-background: #258c3d;
 $datetime-md-padding-start: 7px;
+$toggle-md-track-width:70px;
+$toggle-md-track-height	:30px;
+$toggle-md-handle-height : 25px;
+$toggle-md-handle-width : 25px;
 
 // App Windows Variables
 // --------------------------------------------------
 // Windows only Sass variables can go here
 $menu-wp-background: #258c3d;
 $datetime-wp-padding-start: 0;
+$toggle-wp-track-width : 70px;
+$toggle-wp-track-height: 30px;
+$toggle-wp-handle-height : 25px;
+$toggle-wp-handle-width : 25px;
 
 // App Theme
 // --------------------------------------------------
