changed pop push modals & scss toggle

--- a/Front/autostop/src/pages/home/connexion/main/main.scss
+++ b/Front/autostop/src/pages/home/connexion/main/main.scss
@@ -30,7 +30,7 @@ page-main{
 
     .button {
       display: block;
-      margin: 10% auto 0 auto;
+      margin: 0 auto 0 auto;
     }
 
     .toggle{
