--- a/Front/autostop/src/pages/home/connexion/main/main.scss
+++ b/Front/autostop/src/pages/home/connexion/main/main.scss
@@ -45,6 +45,18 @@ page-main{
       color: white;    /*Text color for each item*/
     }
 
+    .toggle-ios.toggle-checked.rainy-toggle .toggle-inner {
+      background-image: "../../../../assets/imgs/choicePage/driverIcon.png";
+      background-repeat: no-repeat;
+      background-size: 80%;
+      background-color: white;
+      background-position: center;
+  }
+
+  .toggle-ios.toggle-checked.rainy-toggle .toggle-icon {
+      background-color: #0082FF;
+  }
+
   }
 
 }
