Nettoyage du Back

--- a/Front/autostop/src/pages/home/connexion/main/main.scss
+++ b/Front/autostop/src/pages/home/connexion/main/main.scss
@@ -24,7 +24,8 @@ page-main{
       display: block;
       margin: 10% auto 0 auto;
       width: 200px;
-      height: auto;
+      height: 200px;
+      overflow: hidden;
       border-radius: 50%;
     }
 
