clean unused code on front

--- a/Front/autostop/src/pages/home/connexion/main/main.scss
+++ b/Front/autostop/src/pages/home/connexion/main/main.scss
@@ -45,7 +45,7 @@ page-main{
       color: white;    /*Text color for each item*/
     }
 
-    .toggle-ios.toggle-checked.rainy-toggle .toggle-inner {
+    .toggle-ios.toggle-checked.vehiculed-toggle .toggle-inner {
       background-image: "../../../../assets/imgs/choicePage/driverIcon.png";
       background-repeat: no-repeat;
       background-size: 80%;
@@ -53,7 +53,7 @@ page-main{
       background-position: center;
   }
 
-  .toggle-ios.toggle-checked.rainy-toggle .toggle-icon {
+  .toggle-ios.toggle-checked.vehiculed-toggle .toggle-icon {
       background-color: #0082FF;
   }
 
