Affichage image du véhicule dans le profile du conducteur

--- a/Front/autostop/src/pages/home/connexion/main/menu/tabs/vehicle/vehicle.scss
+++ b/Front/autostop/src/pages/home/connexion/main/menu/tabs/vehicle/vehicle.scss
@@ -1,4 +1,14 @@
 page-vehicle {
+ .container {
+    #carImage{
+        display: block;
+        margin: 0 auto 0 auto;
+        width: 200px;
+        height: auto;
+        // overflow: hidden;
+        // border-radius: 50%;
+      }
+    }
   ion-item{
     margin-left:10px;
     }
