--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/linking.scss
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/linking.scss
@@ -9,18 +9,26 @@ page-linking {
 
   .carpicture{
     display: block;
-    margin: auto;
+    margin: 5px auto 10px auto;
     border-radius: 50%;
     max-width: 150px;
   }
 
-  #carinfos {
-    margin: 10px;
+  .carinfos {
     background-color: #EDEDED;
-    padding: 10px;
+    padding: 15px;
+    text-align: end;
 
     h4, h5{
       margin: 0;
+    }
+
+    #carcolor{
+      padding-left: 50px;
+      width: 40px;
+      height: 40px;
+      border: 1px solid darkslategray;
+      border-radius: 50%;
     }
   }
 }
