Changed visual on linking page

--- a/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/linking.scss
+++ b/Front/autostop/src/pages/home/connexion/main/map/request-modal/response-modal/linking/linking.scss
@@ -24,7 +24,7 @@ page-linking {
     }
 
     #carcolor{
-      padding-left: 50px;
+      margin-left: 30px;
       width: 40px;
       height: 40px;
       border: 1px solid darkslategray;
